--- a/final/Makefile
+++ b/final/Makefile
@@ -3,10 +3,11 @@ CFLAGS = -fopenmp -O2 -stdlib=libc++ -L$(shell brew --prefix llvm)/lib
 
 all: my_program
 
-my_program: lab1_v0.cpp
-	$(CC) $(CFLAGS) -o my_program lab1_v0.cpp
+my_program: main.cpp shishua.c
+	$(CC) $(CFLAGS) -o my_program main.cpp
 
 run: my_program
 	OMP_DISPLAY_ENV=VERBOSE ./my_program
+
 clean:
 	rm -f my_program
